@@ -1,6 +1,6 @@
-![TNVBP](https://i.imgur.com/TTzZoVa.png) 
-![Modrinth Downloads](https://img.shields.io/modrinth/dt/Ohwb2cTF?label=Downloads&logo=modrinth&style=flat-square) 
-![Modrinth Game Versions](https://img.shields.io/modrinth/game-versions/Ohwb2cTF?logo=modrinth&style=flat-square) 
+![TNVBP](https://i.imgur.com/TTzZoVa.png)
+![Modrinth Downloads](https://img.shields.io/modrinth/dt/Ohwb2cTF?label=Downloads&logo=modrinth&style=flat-square)
+![Modrinth Game Versions](https://img.shields.io/modrinth/game-versions/Ohwb2cTF?logo=modrinth&style=flat-square)
 [![Discord](https://img.shields.io/discord/607123183249653770?label=Discord&logo=discord&style=flat-square)](https://discord.gg/Yj9WH3P8RN)
 
 <h3>關於模組包</h3>
@@ -47,11 +47,6 @@
             <th>❌</th>
         </tr>
         <tr>
-            <th>遊戲內皮膚更換</th>
-            <th>✅</th>
-            <th>❌</th>
-        </tr>
-        <tr>
             <th>其他 QOL 模組</th>
             <th>✅</th>
             <th>❌</th>
@@ -59,25 +54,56 @@
     </table>
 </ul>
 
-<h3>Java 版本需求說明</h3>
+<h3>Java 下載及設定</h3>
 <ul>
+    <p>Minecraft 1.20.6 以下版本其實也可以使用 Java 21 執行，只要勾選 <code>略過 Java 相容性檢查</code> 即可</p>
     <table>
         <tr>
-            <th>MC版本</th>
-            <th>需要的Java版本</th>
-            <th>Java下載<nav></nav>(<a href="https://adoptium.net/">Adoptium</a>)</th>
+            <th colspan="7">Java 21 下載</th>
         </tr>
         <tr>
-            <th>1.18.2 ~ 1.20.1</th>
-            <th>Java 17</th>
-            <th><a href="https://adoptium.net/temurin/releases/?version=17&os=windows&package=jdk">下載</a></th>
+            <th rowspan="2"><a href="https://adoptium.net/">Adoptium</a></th>
+            <th colspan="2">Windows</th>
+            <th colspan="2">Linux</th>
+            <th colspan="2">macOS</th>
         </tr>
         <tr>
-            <th>1.20.6 ~ 最新版</th>
-            <th>Java 21</th>
-            <th><a href="https://adoptium.net/temurin/releases/?version=21&os=windows&package=jdk">下載</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=windows&arch=x64">x64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=windows&arch=aarch64">aarch64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=linux&arch=x64">x64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=linux&arch=aarch64">aarch64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=mac&arch=x64">x64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=mac&arch=aarch64">aarch64</a></th>
+        </tr>
+        <tr>
+            <th rowspan="2"><a href="https://www.graalvm.org/">GraalVM</a></th>
+            <th colspan="2">Windows</th>
+            <th colspan="2">Linux</th>
+            <th colspan="2">macOS</th>
+        </tr>
+        <tr>
+            <th colspan="2"><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_windows-x64_bin.zip">x64</a></th>
+            <th><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_linux-x64_bin.tar.gz">x64</a></th>
+            <th><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_linux-aarch64_bin.tar.gz">aarch64</a></th>
+            <th><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_macos-x64_bin.tar.gz">x64</a></th>
+            <th><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_macos-aarch64_bin.tar.gz">aarch64</a></th>
         </tr>
     </table>
+    <table>
+        <tr>
+            <th colspan="2">記憶體設定</th>
+        </tr>
+        <tr>
+            <th>最大記憶體使用量</th>
+            <th>4096 MB</th>
+        </tr>
+        <tr>
+            <th>最小記憶體使用量</th>
+            <th>4096 MB</th>
+        </tr>
+    </table>
+    <h4>JVM 參數</h4>
+    <pre><code>-XX:+UseZGC -XX:+ZGenerational -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:+PerfDisableSharedMem -XX:+UseDynamicNumberOfGCThreads</code></pre>
 </ul>
 
 <h3>問題回報</h3>
@@ -85,7 +111,6 @@
     <li>若對模組包有任何問題和建議歡迎私訊我Discord：tn_technoob</li>
     <li>或到我的 Discord 群 <a href="https://discord.gg/Yj9WH3P8RN">TNSU丨塔可努的太空烏托邦</a> 回報</li>
 </ul>
-
 
 <details>
     <summary>
@@ -137,11 +162,6 @@
             <th>❌</th>
         </tr>
         <tr>
-            <th>In-game Skin changer</th>
-            <th>✅</th>
-            <th>❌</th>
-        </tr>
-        <tr>
             <th>Other QOL Mods</th>
             <th>✅</th>
             <th>❌</th>
@@ -149,25 +169,56 @@
     </table>
 </ul>
 
-<h3>Java Version Requirements</h3>
+<h3>Java Download & Configuration</h3>
 <ul>
+    <p>Minecraft 1.20.6 and below can actually run with Java 21, just check the <code>Skip Java compatibility checks</code> check box</p>
     <table>
         <tr>
-            <th>Minecraft Versions</th>
-            <th>Required Java Version</th>
-            <th>Java Download<nav></nav>(<a href="https://adoptium.net/">Adoptium</a>)</th>
+            <th colspan="7">Java 21 Download</th>
         </tr>
         <tr>
-            <th>1.18.2 ~ 1.20.1</th>
-            <th>Java 17</th>
-            <th><a href="https://adoptium.net/temurin/releases/?version=17&os=windows&package=jdk">Download</a></th>
+            <th rowspan="2"><a href="https://adoptium.net/">Adoptium</a></th>
+            <th colspan="2">Windows</th>
+            <th colspan="2">Linux</th>
+            <th colspan="2">macOS</th>
         </tr>
         <tr>
-            <th>1.20.6 ~ Latest</th>
-            <th>Java 21</th>
-            <th><a href="https://adoptium.net/temurin/releases/?version=21&os=windows&package=jdk">Download</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=windows&arch=x64">x64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=windows&arch=aarch64">aarch64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=linux&arch=x64">x64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=linux&arch=aarch64">aarch64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=mac&arch=x64">x64</a></th>
+            <th><a href="https://adoptium.net/temurin/releases/?variant=openjdk21&jvmVariant=hotspot&package=jre&os=mac&arch=aarch64">aarch64</a></th>
+        </tr>
+        <tr>
+            <th rowspan="2"><a href="https://www.graalvm.org/">GraalVM</a></th>
+            <th colspan="2">Windows</th>
+            <th colspan="2">Linux</th>
+            <th colspan="2">macOS</th>
+        </tr>
+        <tr>
+            <th colspan="2"><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_windows-x64_bin.zip">x64</a></th>
+            <th><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_linux-x64_bin.tar.gz">x64</a></th>
+            <th><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_linux-aarch64_bin.tar.gz">aarch64</a></th>
+            <th><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_macos-x64_bin.tar.gz">x64</a></th>
+            <th><a href="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_macos-aarch64_bin.tar.gz">aarch64</a></th>
         </tr>
     </table>
+    <table>
+        <tr>
+            <th colspan="2">Memory Settings</th>
+        </tr>
+        <tr>
+            <th>Maximum</th>
+            <th>4096 MB</th>
+        </tr>
+        <tr>
+            <th>Minimum</th>
+            <th>4096 MB</th>
+        </tr>
+    </table>
+    <h4>JVM arguments</h4>
+    <pre><code>-XX:+UseZGC -XX:+ZGenerational -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:+PerfDisableSharedMem -XX:+UseDynamicNumberOfGCThreads</code></pre>
 </ul>
 
 <h3>Issues Report</h3>
@@ -177,7 +228,6 @@
 </ul>
 
 </details>
-
 
 <h3>支持塔可努丨TechNoob (ECPay綠界科技)</h3>
 <a href="https://p.ecpay.com.tw/5F5F547">
